<resources>
    <!--Home-->
    <string name="app_name">easydeliver</string>
    <string name="bottom_tab_main">首页</string>
    <string name="bottom_tab_order">订单</string>
    <string name="bottom_tab_me">我的</string>
    <string name="main_wash">洗涤护理</string>
    <string name="main_shop">顺带购物</string>
    <string name="main_agent">代购</string>
    <string name="main_express">取送件</string>
    <string name="main_more">更多</string>
    <string name="main_new_recommand">新品特惠</string>
    <string name="main_hot_recommand">热门推荐</string>
    <string name="me_login">登 录</string>
    <string name="me_qr_code">二维码</string>
    <string name="me_login_password">登录密码</string>
    <string name="me_purchase_password">支付密码</string>
    <string name="me_push_msg">推送通知</string>
    <string name="me_lan_change">语言选择</string>
    <string name="me_suggest">投诉建议</string>
    <!--shop-->
    <string name="shop_sure">确定</string>
    <string name="shop_totalprice">合计金额:</string>
    <!--<string name="shop_totalprice">合计金额: $ %f.2</string>-->
    <!--order-->
    <string name="order_title">我的订单</string>
    <string name="order_all">全部</string>
    <string name="order_wait_purchase">待付款</string>
    <string name="order_work">作业中</string>
    <string name="order_express">配送中</string>
    <string name="order_wait_comment">待评价</string>
    <string name="order_trade_success">交易成功</string>
    <string name="order_comment">评价</string>
    <string name="order_logistics">物流</string>
    <string name="order_del">删除</string>
    <string name="order_purchase">付款</string>
    <string name="order_cancel">取消订单</string>
    <string name="order_receive_info">收件信息</string>
    <string name="order_receive_time">收件时间</string>
    <string name="order_orderid">订单编号</string>
    <string name="order_create_time">创建时间</string>
    <string name="order_pay_time">付款时间</string>
    <string name="order_express_time">送货时间</string>
    <string name="order_strike_time">成交时间</string>
    <string name="product_info">商品信息</string>
    <string name="product_postage_info">资费说明</string>
    <string name="order_detail_title">订单详情</string>


    <string name="live_load_more">查看更多</string>

    <!-- Common -->
    <string name="charge_loading">加载中...</string>
    <string name="charge_no_data_tips">╮(╯3╰)╭再怎么找也没有啦</string>
    <string name="upper_load_failed_with_click">加载失败,请点击重新尝试</string>
    <string name="tips_load_error">加载失败了Σ(OДO</string>
    <string name="section_region">分区</string>

    <string name="str_text_msg">&#xe626;</string>
    <string name="str_text_jiantou">&#xe66b;</string>
    <string name="str_return_jiantou">&#xe605;</string>
</resources>
