<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/bgf5f5f5"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/order_nav"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:includeFontPadding="true"
            android:text="@string/order_title"
            android:textColor="@color/black"
            android:textSize="25dp" />

        <com.easydeliver.ink.app.base.ui.IconFontTextView
            android:id="@+id/tv_msg"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:text="@string/str_text_msg"
            android:textColor="@color/bgB0B0B0"
            android:textSize="25dp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bge6e6e6"></View>

    <android.support.design.widget.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        app:tabIndicatorColor="@color/bg0093D7"
        app:tabIndicatorHeight="4dp"
        app:tabMode="scrollable"
        app:tabSelectedTextColor="@color/bg0093D7"
        app:tabTextColor="@color/bg9A9A9A">

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_all" />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_wait_purchase" />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_work" />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_express" />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_wait_comment" />
    </android.support.design.widget.TabLayout>

    <FrameLayout
        android:id="@+id/fragment_order"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>