<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="43dp"
    android:background="@color/white">

    <com.easydeliver.ink.app.base.ui.IconFontTextView
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:textSize="14.4sp"
        android:text="@string/str_return_jiantou"
        android:textColor="@color/bg222222"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/main_agent"
        android:textColor="@color/bg222222"
        android:layout_centerInParent="true"
        android:textSize="14.4sp" />

    <com.easydeliver.ink.app.base.ui.IconFontTextView
        android:layout_width="38.4dp"
        android:layout_height="38.4dp"
        android:layout_alignParentRight="true"
        android:gravity="center"
        android:text="@string/str_text_msg"
        android:textColor="@color/bga7a7a7"
        android:textSize="19.2dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true"
        android:background="@color/bge6e6e6" />
</RelativeLayout>