<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="170dp"
    android:background="@color/white"
    android:orientation="vertical"
    >
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bge6e6e6"
        />
    <TextView
        android:id="@+id/total_sum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="25dp"
        android:gravity="center_vertical|right"
        android:paddingRight="20dp"
        android:textSize="23dp" />
    <RelativeLayout
        android:id="@+id/order_rl_success"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingRight="20dp"
        android:gravity="center_vertical"
        android:visibility="gone"
        >

        <Button
            android:id="@+id/order_but_comment"
            android:layout_width="132dp"
            android:layout_height="56dp"
            android:text="@string/order_comment"
            android:textColor="@color/bg0093D7"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:textSize="22dp"
            android:background="@drawable/drawable_order_comment_border"
            />
        <Button
            android:id="@+id/order_but_del"
            android:layout_width="132dp"
            android:layout_height="56dp"
            android:text="@string/order_del"
            android:textColor="@color/bgD2D3D5"
            android:layout_toLeftOf="@id/order_but_comment"
            android:gravity="center"
            android:layout_marginRight="32dp"
            android:textSize="22dp"
            android:background="@drawable/drawable_order_del_border"
            />
        <Button
            android:id="@+id/order_but_logistics"
            android:layout_width="132dp"
            android:layout_height="56dp"
            android:text="@string/order_logistics"
            android:textColor="@color/bgD2D3D5"
            android:layout_toLeftOf="@id/order_but_del"
            android:gravity="center"
            android:layout_marginRight="32dp"
            android:textSize="22dp"
            android:background="@drawable/drawable_order_del_border"
            />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/order_rl_wait_purchase"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingRight="20dp"
        android:gravity="center_vertical"
        >

        <Button
            android:id="@+id/order_but_purchase"
            android:layout_width="132dp"
            android:layout_height="56dp"
            android:text="@string/order_purchase"
            android:textColor="@color/white"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:textSize="22dp"
            android:background="@drawable/drawable_order_purchase_border"
            />
        <Button
            android:id="@+id/order_but_cancel"
            android:layout_width="132dp"
            android:layout_height="56dp"
            android:text="@string/order_cancel"
            android:textColor="@color/bgD2D3D5"
            android:layout_toLeftOf="@id/order_but_purchase"
            android:gravity="center"
            android:layout_marginRight="32dp"
            android:textSize="22dp"
            android:background="@drawable/drawable_order_del_border"
            />
    </RelativeLayout>
</LinearLayout>